# vpn_launcher

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_README.md  README.md  cli.py  install.sh  pyproject.toml  vpn
lib/: config.sh  configure.sh  connect.sh  core.sh  disconnect.sh  session.sh  status.sh  ui.sh
templates/: README.md.template  example.conf.template  vpns.conf.template
tests/: test_config.py  test_connect.py  test_session.py
tray/: install_tray.sh  vpn_backend.py  vpn_tray.py  vpn_tray_launch.sh
vpn_manager/: __init__.py  config.py  connect.py  disconnect.py  models.py  profile.py  session.py  status.py  wizard.py
